external-crates/move/crates/move-compiler/tests/move_check/expansion/use_inner_scope_duplicates.exp
error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/use_inner_scope_duplicates.move:13:43
   │
13 │         use 0x2::M::{check as foo, num as foo};
   │                               ---         ^^^ Duplicate module member or alias 'foo'. Top level names in a namespace must be unique
   │                               │            
   │                               Alias previously defined here

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/use_inner_scope_duplicates.move:15:23
   │
14 │         use 0x2::M as N;
   │                       - Alias previously defined here
15 │         use 0x2::M as N;
   │                       ^ Duplicate module alias 'N'. Module aliases must be unique within a given namespace

